apidocs and error logger
